Fix: overflow hidden issue for slider arrows

--- a/assets/css/blocks/slider.css
+++ b/assets/css/blocks/slider.css
@@ -1,1 +1,1 @@
-.uagb-swiper{overflow:hidden;position:relative}.uagb-swiper .swiper-pagination{position:relative}
+.uagb-swiper{position:relative;overflow:hidden}.uagb-swiper .swiper-pagination{position:relative}.uagb-slider-container{position:relative}
